# SaturnMenu

./: .gitattributes  .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml.cs  Noturnal.sln  NuGet.config  README.md  Saturn.sln
Crypto/: Crypto.cpp  Crypto.vcxproj
Data/: gamedata.json
Models/: Models.cs
Noturnal-KM/: Noturnal_KERNEL.vcxproj  Resource.rc  kdmapper.cpp  main.cpp
Noturnal-KM/driver/: COMPILE.md  README.md  SaturnKernelDriver.sys  build.bat  build_and_convert.bat  driver.c  driver.h  driver.txt  sources
Noturnal-KM/include/: cfg.h  logger.h  web_api.h
Noturnal-Loader/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Noturnal.Loader.csproj
Noturnal-Loader/Converters/: BoolToVisibilityConverter.cs  EqualityConverter.cs  SeverityToBrushConverter.cs
Noturnal-Loader/Infra/: RelayCommand.cs
Noturnal-Loader/Models/: Cheat.cs  LogEntry.cs  User.cs
Noturnal-Loader/Services/: AuthService.cs  CheatService.cs  CredentialStore.cs  DownloadService.cs  LogService.cs  NativeInterop.cs  NativeLoader.cs  Payloads.cs  PipeLogServer.cs  SecurityConfig.cs  SettingsService.cs  ToastService.cs
Noturnal-Loader/Themes/: Colors.xaml  DarkTheme.xaml  HighContrast.xaml  LightTheme.xaml  Spacing.xaml  Styles.xaml  Typography.xaml
Noturnal-Loader/ViewModels/: ConfigVM.cs  InjectorVM.cs  LoginVM.cs  ShellVM.cs  SupportVM.cs  WebsiteVM.cs
Noturnal-Loader/Views/: CheatDetailsWindow.xaml  CheatDetailsWindow.xaml.cs  ConfigPage.xaml  ConfigPage.xaml.cs  InjectorPage.xaml  InjectorPage.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  SupportPage.xaml  SupportPage.xaml.cs  WebsitePage.xaml  WebsitePage.xaml.cs
Noturnal-UM/: Noturnal.vcxproj  main.cpp
Noturnal-UM/Config/: ConfigMenu.cpp  ConfigSaver.cpp
Noturnal-UM/Core/: Cheats.cpp  Cheats.h  Config.h  DI.h  EntityResult.h  GLTFLoader.cpp  GLTFLoader.h  GUI.h  GlobalVars.h  Globals.h  Init.h  MemoryMgr.cpp  MemoryMgr.h  Render.h  Renderer3D.cpp  Renderer3D.h
Noturnal-UM/Features/: Aimbot.cpp  Aimbot.h  BombTimer.h  ESP.h  Hitbox.h  Misc.cpp  Misc.h  RCS.h  Radar.h  SoundESP.h  SpectatorList.h  TriggerBot.cpp
Noturnal-UM/Game/: Bone.cpp  Bone.h  Entity.cpp  Entity.h  Game.cpp  Game.h  View.h  Weapon.cpp  Weapon.h
Noturnal-UM/Geo/: MapGeo.cpp  MapGeo.h
Noturnal-UM/Helpers/: GetWeaponIcon.h  Logger.h  Mouse.cpp  StorageMgr.cpp  UIAccess.cpp  UIAccess.h  WebApi.h
Noturnal-UM/OS-ImGui/: OS-ImGui.cpp  OS-ImGui.h  OS-ImGui_Base.cpp  OS-ImGui_Base.cpp.bak  OS-ImGui_Base.h  OS-ImGui_Exception.h  OS-ImGui_External.cpp  OS-ImGui_External.h
Noturnal-UM/Offsets/: Offsets.cpp  Offsets.h
Noturnal-UM/Resources/: Font.h  IconsFontAwesome.h  Images.h  Language.h  Logo.generated.h  MenuIcon.h  Resource.rc  Sounds.h  resource.h
Noturnal-Web/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts
Noturnal-Web/components/: Footer.tsx  ImguiPreviewModal.tsx  MatrixSidebar.tsx  Navbar.tsx  ParticleBackground.tsx  PaymentModal.tsx  RadarSimulator.tsx  SocialProof.tsx  TerminalModal.tsx  TextScramble.tsx
Noturnal-Web/context/: AuthContext.tsx
Noturnal-Web/hooks/: useSound.ts
Noturnal-Web/pages/: Auth.tsx  Configs.tsx  Dashboard.tsx  Home.tsx  Pricing.tsx  Profile.tsx  Support.tsx  Watchtower.tsx  Wiki.tsx
Noturnal-Web/services/: api.ts  geminiService.ts  mockApi.ts
Noturnal.Server/: Program.cs  package-lock.json  package.json  server-data.json  server.js
Noturnal.Server.Node/: package.json  server.js
NoturnalNative/: NoturnalNative.vcxproj  dllmain.cpp  noturnal_native.cpp  noturnal_native.h
Saturn-KM/: Resource.rc  Saturn_KERNEL.vcxproj  kdmapper.cpp  main.cpp  update_cfg.py
Saturn-KM/driver/: COMPILE.md  README.md  SaturnKernelDriver.sys  build.bat  build_and_convert.bat  convert_driver.py  driver.c  driver.h  sources
Saturn-KM/include/: cfg.h  logger.h
Saturn-Loader/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Saturn.Loader.csproj
Saturn-Loader/Converters/: BoolToVisibilityConverter.cs  EqualityConverter.cs  SeverityToBrushConverter.cs
Saturn-Loader/Infra/: RelayCommand.cs
Saturn-Loader/Models/: Cheat.cs  LogEntry.cs  User.cs
Saturn-Loader/Services/: AuthService.cs  CheatService.cs  DownloadService.cs  LogService.cs  NativeInterop.cs  NativeLoader.cs  Payloads.cs  PipeLogServer.cs  SettingsService.cs  ToastService.cs
Saturn-Loader/Themes/: Colors.xaml  DarkTheme.xaml  HighContrast.xaml  LightTheme.xaml  Spacing.xaml  Styles.xaml  Typography.xaml
Saturn-Loader/ViewModels/: ConfigVM.cs  InjectorVM.cs  LoginVM.cs  ShellVM.cs  SupportVM.cs  WebsiteVM.cs
Saturn-Loader/Views/: CheatDetailsWindow.xaml  CheatDetailsWindow.xaml.cs  ConfigPage.xaml  ConfigPage.xaml.cs  InjectorPage.xaml  InjectorPage.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  SupportPage.xaml  SupportPage.xaml.cs  WebsitePage.xaml  WebsitePage.xaml.cs
Saturn-UM/: Saturn.filters  Saturn.vcxproj  main.cpp
Saturn-UM/Config/: ConfigMenu.cpp  ConfigSaver.cpp
Saturn-UM/Core/: Cheats.cpp  Cheats.h  Config.h  EntityResult.h  FrameContext.h  GUI.h  Init.h  Interfaces.h  MemoryMgr.cpp  MemoryMgr.h  Metrics.h  Render.h
Saturn-UM/Features/: Aimbot.cpp  Aimbot.h  BombTimer.h  ESP.h  Hitbox.h  Misc.cpp  Misc.h  RCS.cpp  RCS.h  SoundESP.h  SpectatorList.h  TriggerBot.cpp  TriggerBot.h
Saturn-UM/Game/: Bone.cpp  Entity.cpp  Weapon.cpp  Weapon.h
Saturn-UM/Geo/: MapGeo.cpp  MapGeo.h
Saturn-UM/Helpers/: GetWeaponIcon.h  KeyManager.h  Logger.h
Saturn-UM/OS-ImGui/: OS-ImGui.cpp  OS-ImGui.h  OS-ImGui_Base.cpp  OS-ImGui_Base.h  OS-ImGui_External.cpp  OS-ImGui_Struct.h
SaturnNative/: SaturnNative.vcxproj  saturn_native.cpp
Services/: InjectionService.cs
ViewModels/: MainWindowViewModel.cs
Views/: CheatDetailsWindow.xaml  CheatDetailsWindow.xaml.cs  ConfigPage.xaml  ConfigPage.xaml.cs  InjectorPage.xaml  LoginPage.xaml  LoginPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  SupportPage.xaml  SupportPage.xaml.cs  WebsitePage.xaml  WebsitePage.xaml.cs
docs/: CommitMessagesGuidance.md  StyleGuide.md  Todo.md
saturnweb/: package-lock.json  package.json
(+53 files in other folders)
